<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>ClassicalDP</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
    <plugins>
        <plugin>
            <groupId>org.pitest</groupId>
            <artifactId>pitest-maven</artifactId>
            <version>1.9.11</version>
            <configuration>
                <targetClasses>
                    <param>org.example.services.*</param>
                </targetClasses>
                <targetTests>
                    <param>org.example.services.*</param>
                </targetTests>
            </configuration>
        </plugin>

        <plugin>  
                <!-- Build an executable JAR -->  
                <groupId>org.apache.maven.plugins</groupId>  
                <artifactId>maven-jar-plugin</artifactId>  
                <version>3.1.0</version>  
                <configuration>  
                    <archive>  
                        <manifest>  
                            <mainClass>org.example.Main</mainClass>  
                        </manifest>  
                    </archive>  
                </configuration>  
            </plugin> 
    </plugins>
    </build>
    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency> 
    </dependencies>


</project>